Work for #1491: fix scrollbars in firefox

--- a/packages/survey-creator-core/src/components/creator.scss
+++ b/packages/survey-creator-core/src/components/creator.scss
@@ -6,6 +6,10 @@ survey-creator,
   width: 100%;
   height: 100%;
 
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: $primary-light $background-dim;
+  }
   ::-webkit-scrollbar {
     height: 6px;
     width: 6px;
